GoNoGo/force-app/main/default/objects/Go_No_Go_Section__c/Go_No_Go_Section__c.object-meta.xml
<CustomObject>
    <description>There can be multiple sections in a Go/No-Go flow. Each section can consist of different sets of questions. To store the sections, we are going to use this object.</description>
    <label>Go/No-Go Section</label>
    <nameField>
        <label>Go/No-Go Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Go/No-Go Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>