GoNoGo/force-app/main/default/objects/Go_No_Go_Section__c/fields/Go_No_Go_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Configuration__c</fullName>
    <description>Master-Detail relation with Go/No-Go Configuration.</description>
    <label>Go/No-Go Configuration</label>
    <referenceTo>Go_No_Go_Configuration__c</referenceTo>
    <relationshipLabel>Go/No-Go Sections</relationshipLabel>
    <relationshipName>Go_No_Go_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>