GoNoGo/force-app/main/default/objects/Go_No_Go_Section__c/fields/Section_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Section_Sequence__c</fullName>
    <description>Sequence number of the section on Go/No-Go screen.</description>
    <label>Section Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>