GoNoGo/force-app/main/default/objects/Go_No_Go_Section__c/fields/Sum_of_Max_Scores__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Max_Scores__c</fullName>
    <label>Sum of Max Scores</label>
    <summarizedField>Go_No_Go_Question_Bank__c.Max_Score_Entered__c</summarizedField>
    <summaryForeignKey>Go_No_Go_Question_Bank__c.Go_No_Go_Section__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>