GoNoGo/force-app/main/default/objects/Go_No_Go_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section_Sequence__c</columns>
    <columns>Go_No_Go_Configuration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>